# test-rest-app-fastapi

./: .env.local  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
app/api_v1/: __init__.py
app/api_v1/wallet/: schemas.py  views.py
app/core/: __init__.py  config.py  db_helper.py  logger.py
app/crud/: base.py  wallet.py
app/migrations/: env.py
app/migrations/versions/: 2025_07_20_1927-5cf1fed8f79f_create_models.py  2025_07_20_2230-9c310b7c0c22_added_field_wallet.py  2025_07_20_2248-257ead437ca0_update_field_base_id.py  2025_07_21_1029-db75371bb787_update_model_wallet.py  2025_07_21_2251-deaff6296ac5_inital.py  2025_07_22_1624-6165d62667f1_update.py  b4bf543478ae_init.py
app/models/: __init__.py  base.py  models.py
tests/: conftest.py  test_wallets.py
